lib/pdfio_bindings_generated.dart


  late final _pdfioObjCreateStreamPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_stream_t> Function(
              ffi.Pointer<pdfio_obj_t>, ffi.Int32)>>('pdfioObjCreateStream');
  late final _pdfioObjCreateStream = _pdfioObjCreateStreamPtr.asFunction<
      ffi.Pointer<pdfio_stream_t> Function(ffi.Pointer<pdfio_obj_t>, int)>();

  ffi.Pointer<pdfio_array_t> pdfioObjGetArray(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetArray(
      obj,
    );
  }

  late final _pdfioObjGetArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_array_t> Function(
              ffi.Pointer<pdfio_obj_t>)>>('pdfioObjGetArray');
  late final _pdfioObjGetArray = _pdfioObjGetArrayPtr.asFunction<
      ffi.Pointer<pdfio_array_t> Function(ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<pdfio_dict_t> pdfioObjGetDict(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetDict(
      obj,
    );
  }

  late final _pdfioObjGetDictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_dict_t> Function(
              ffi.Pointer<pdfio_obj_t>)>>('pdfioObjGetDict');
  late final _pdfioObjGetDict = _pdfioObjGetDictPtr.asFunction<
      ffi.Pointer<pdfio_dict_t> Function(ffi.Pointer<pdfio_obj_t>)>();

  int pdfioObjGetGeneration(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetGeneration(
      obj,
    );
  }

  late final _pdfioObjGetGenerationPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedShort Function(
              ffi.Pointer<pdfio_obj_t>)>>('pdfioObjGetGeneration');
  late final _pdfioObjGetGeneration = _pdfioObjGetGenerationPtr
      .asFunction<int Function(ffi.Pointer<pdfio_obj_t>)>();

  int pdfioObjGetLength(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetLength(
      obj,
    );
  }

  late final _pdfioObjGetLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_obj_t>)>>(
          'pdfioObjGetLength');
  late final _pdfioObjGetLength = _pdfioObjGetLengthPtr
      .asFunction<int Function(ffi.Pointer<pdfio_obj_t>)>();

  int pdfioObjGetNumber(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetNumber(
      obj,
    );
  }

  late final _pdfioObjGetNumberPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_obj_t>)>>(
          'pdfioObjGetNumber');
  late final _pdfioObjGetNumber = _pdfioObjGetNumberPtr
      .asFunction<int Function(ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<ffi.Char> pdfioObjGetSubtype(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetSubtype(
      obj,
    );
  }

  late final _pdfioObjGetSubtypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_obj_t>)>>('pdfioObjGetSubtype');
  late final _pdfioObjGetSubtype = _pdfioObjGetSubtypePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<ffi.Char> pdfioObjGetType(
    ffi.Pointer<pdfio_obj_t> obj,
  ) {
    return _pdfioObjGetType(
      obj,
    );
  }

  late final _pdfioObjGetTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_obj_t>)>>('pdfioObjGetType');
  late final _pdfioObjGetType = _pdfioObjGetTypePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<pdfio_stream_t> pdfioObjOpenStream(
    ffi.Pointer<pdfio_obj_t> obj,
    ffi.Pointer<bool> decode,
  ) {
    return _pdfioObjOpenStream(
      obj,
      decode,
    );
  }

  late final _pdfioObjOpenStreamPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_stream_t> Function(ffi.Pointer<pdfio_obj_t>,
              ffi.Pointer<bool>)>>('pdfioObjOpenStream');
  late final _pdfioObjOpenStream = _pdfioObjOpenStreamPtr.asFunction<
      ffi.Pointer<pdfio_stream_t> Function(
          ffi.Pointer<pdfio_obj_t>, ffi.Pointer<bool>)>();

  int pdfioPageCopy(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_obj_t> srcpage,
  ) {
    return _pdfioPageCopy(
      pdf,
      srcpage,
    );
  }

  late final _pdfioPageCopyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_obj_t>)>>('pdfioPageCopy');
  late final _pdfioPageCopy = _pdfioPageCopyPtr.asFunction<
      int Function(ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_obj_t>)>();

  int pdfioPageGetNumStreams(
    ffi.Pointer<pdfio_obj_t> page,
  ) {
    return _pdfioPageGetNumStreams(
      page,
    );
  }

  late final _pdfioPageGetNumStreamsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_obj_t>)>>(
          'pdfioPageGetNumStreams');
  late final _pdfioPageGetNumStreams = _pdfioPageGetNumStreamsPtr
      .asFunction<int Function(ffi.Pointer<pdfio_obj_t>)>();

  ffi.Pointer<pdfio_stream_t> pdfioPageOpenStream(
    ffi.Pointer<pdfio_obj_t> page,
    int n,
    ffi.Pointer<bool> decode,
  ) {
    return _pdfioPageOpenStream(
      page,
      n,
      decode,
    );
  }

  late final _pdfioPageOpenStreamPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_stream_t> Function(ffi.Pointer<pdfio_obj_t>,
              ffi.Int, ffi.Pointer<bool>)>>('pdfioPageOpenStream');
  late final _pdfioPageOpenStream = _pdfioPageOpenStreamPtr.asFunction<
      ffi.Pointer<pdfio_stream_t> Function(
          ffi.Pointer<pdfio_obj_t>, int, ffi.Pointer<bool>)>();

  int pdfioStreamClose(
    ffi.Pointer<pdfio_stream_t> st,
  ) {
    return _pdfioStreamClose(
      st,
    );
  }

  late final _pdfioStreamClosePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_stream_t>)>>(
      'pdfioStreamClose');
  late final _pdfioStreamClose = _pdfioStreamClosePtr
      .asFunction<int Function(ffi.Pointer<pdfio_stream_t>)>();

  int pdfioStreamConsume(
    ffi.Pointer<pdfio_stream_t> st,
    int bytes,
  ) {
    return _pdfioStreamConsume(
      st,
      bytes,
    );
  }

  late final _pdfioStreamConsumePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<pdfio_stream_t>, ffi.Int)>>('pdfioStreamConsume');
  late final _pdfioStreamConsume = _pdfioStreamConsumePtr
      .asFunction<int Function(ffi.Pointer<pdfio_stream_t>, int)>();

  int pdfioStreamGetToken(
    ffi.Pointer<pdfio_stream_t> st,
    ffi.Pointer<ffi.Char> buffer,
    int bufsize,
  ) {
    return _pdfioStreamGetToken(
      st,
      buffer,
      bufsize,
    );
  }

  late final _pdfioStreamGetTokenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('pdfioStreamGetToken');
  late final _pdfioStreamGetToken = _pdfioStreamGetTokenPtr.asFunction<
      int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Char>, int)>();

  int pdfioStreamPeek(
    ffi.Pointer<pdfio_stream_t> st,
    ffi.Pointer<ffi.Void> buffer,
    int bytes,
  ) {
    return _pdfioStreamPeek(
      st,
      buffer,
      bytes,
    );
  }

  late final _pdfioStreamPeekPtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Void>,
              ffi.Int)>>('pdfioStreamPeek');
  late final _pdfioStreamPeek = _pdfioStreamPeekPtr.asFunction<
      int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Void>, int)>();

  int pdfioStreamPrintf(
    ffi.Pointer<pdfio_stream_t> st,
    ffi.Pointer<ffi.Char> format,
  ) {
    return _pdfioStreamPrintf(
      st,
      format,
    );
  }

  late final _pdfioStreamPrintfPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_stream_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioStreamPrintf');
  late final _pdfioStreamPrintf = _pdfioStreamPrintfPtr.asFunction<
      int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioStreamPutChar(
    ffi.Pointer<pdfio_stream_t> st,
    int ch,
  ) {
    return _pdfioStreamPutChar(
      st,
      ch,
    );
  }

  late final _pdfioStreamPutCharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<pdfio_stream_t>, ffi.Int)>>('pdfioStreamPutChar');
  late final _pdfioStreamPutChar = _pdfioStreamPutCharPtr
      .asFunction<int Function(ffi.Pointer<pdfio_stream_t>, int)>();

  int pdfioStreamPuts(
    ffi.Pointer<pdfio_stream_t> st,
    ffi.Pointer<ffi.Char> s,
  ) {
    return _pdfioStreamPuts(
      st,
      s,
    );
  }

  late final _pdfioStreamPutsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_stream_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioStreamPuts');
  late final _pdfioStreamPuts = _pdfioStreamPutsPtr.asFunction<
      int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioStreamRead(
    ffi.Pointer<pdfio_stream_t> st,
    ffi.Pointer<ffi.Void> buffer,
    int bytes,
  ) {
    return _pdfioStreamRead(
      st,
      buffer,
      bytes,
    );
  }

  late final _pdfioStreamReadPtr = _lookup<
      ffi.NativeFunction<
          ssize_t Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Void>,
              ffi.Int)>>('pdfioStreamRead');
  late final _pdfioStreamRead = _pdfioStreamReadPtr.asFunction<
      int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Void>, int)>();

  int pdfioStreamWrite(
    ffi.Pointer<pdfio_stream_t> st,
    ffi.Pointer<ffi.Void> buffer,
    int bytes,
  ) {
    return _pdfioStreamWrite(
      st,
      buffer,
      bytes,
    );
  }

  late final _pdfioStreamWritePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Void>,
              ffi.Int)>>('pdfioStreamWrite');
  late final _pdfioStreamWrite = _pdfioStreamWritePtr.asFunction<
      int Function(ffi.Pointer<pdfio_stream_t>, ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Char> pdfioStringCreate(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> s,
  ) {
    return _pdfioStringCreate(
      pdf,
      s,
    );
  }

  late final _pdfioStringCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioStringCreate');
  late final _pdfioStringCreate = _pdfioStringCreatePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> pdfioStringCreatef(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<ffi.Char> format,
  ) {
    return _pdfioStringCreatef(
      pdf,
      format,
    );
  }

  late final _pdfioStringCreatefPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioStringCreatef');
  late final _pdfioStringCreatef = _pdfioStringCreatefPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<ffi.Char>)>();
}

final class _pdfio_array_s extends ffi.Opaque {}

final class _pdfio_dict_s extends ffi.Opaque {}

final class _pdfio_file_s extends ffi.Opaque {}

/// Error callback
abstract class pdfio_encryption_e {
  /// No encryption
  static const int PDFIO_ENCRYPTION_NONE = 0;

  /// 40-bit RC4 encryption (PDF 1.3)
  static const int PDFIO_ENCRYPTION_RC4_40 = 1;

  /// 128-bit RC4 encryption (PDF 1.4)
  static const int PDFIO_ENCRYPTION_RC4_128 = 2;

  /// 128-bit AES encryption (PDF 1.6)
  static const int PDFIO_ENCRYPTION_AES_128 = 3;

  /// 256-bit AES encryption (PDF 2.0) @exclude all@
  static const int PDFIO_ENCRYPTION_AES_256 = 4;
}

abstract class pdfio_filter_e {
  /// No filter
  static const int PDFIO_FILTER_NONE = 0;

  /// ASCIIHexDecode filter (reading only)
  static const int PDFIO_FILTER_ASCIIHEX = 1;

  /// ASCII85Decode filter (reading only)
  static const int PDFIO_FILTER_ASCII85 = 2;

  /// CCITTFaxDecode filter
  static const int PDFIO_FILTER_CCITTFAX = 3;
